# Screenshot-OCR

./: .gitignore  7-seg-num.csv  7-seg-num.pkl  7-seg.csv  Pipfile  READ.ME  README.md  Untitled-1.ipynb  Untitled.ipynb  __init__.py  abcdef-7.csv  app_type.py  bin2.py  byte_digit_csv.py  check_pyocr.py  checksum.py  concat_pdf.py  convert_to_pdf.py  digit_draw.py  digit_image.py  digit_strokes.py  draw_box_of_txt_line.py  draw_stroke_num.py  edit_main_my_ocr.py  extract_pdf_text.py  extract_txt_from_png.py  format_num.py  get_image_outline.py  gyoumu_tact.py  hdr_ftr.py  image_fill.py  imreadmulti_test.py  jr-tokai-ca.txt  jupyter_lab_config.py  load_csv_7.py  main_my_ocr.py  misaki.py  misaki_font.py  num_strokes.py  num_to_strokes.py  (+39 more)
concat_images/: concat_12.py  concat_images.py
edge_detect/: app_type_detect.py  circle-detect.md  circle_detect.py  circle_detect.toml  clahe_rect.py  detect_edges.md  flask_matplot.py  image-area-param.cfg  image-area-param.ini  image-filter.env  image-filter.ini  image-filter.toml  image_filter.py  image_filter.py.bak  image_filter_main_settings.py  logging-debug.conf  matblotlib_draw.py  matplotlib_draw.py  matplotlib_draw.toml  mouse_event.py  near_bunch.py  ocr-filter.toml  ocr_filter.py  ocr_filter_dal.py  ocr_filter_model.py  path_chooser.py  rect-detect.md  rect_detect.py  rect_detect.toml  taimee_filter.py  tesseract_ocr  tesseract_ocr.py  trackbar_test.py  trackbar_test.toml
edge_detect/database/: ocr_filter_tables.py
tile/: digit_image.py  get_checksum.py  image_fill.py  input_dir.py  logging_handler.py  misaki_font.py  path_feeder.py  save_remote_file.py  tile.py  tool_pyocr.py  txt_lines_db.py
web_gui/: draw_image_remi.py
