[project]
name = "taimi-screen"
version = "1.1.1"
description = "generate PDF from taimi screenshots"
authors = [{ name = "Yasukazu ", email = "yasukazu@makyno.jp" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "console-menu>=0.8.0",
    "img2pdf>=0.5.1,<0.6.0",
    "logbook>=1.8.2",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.2.3",
    "pick>=2.4.0",
    "pillow>=11.1.0",
    "pyocr>=0.8.5",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "returns>=0.23.0",
]

[dependency-groups]
dev = [
    "pudb>=2025.1.1",
    "python-dotenv[cli]>=1.1.0",
    "ruff>=0.13.2",
    "jupyterlab>=4.4.9",
    "xeus-python>=0.17.6",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
