[project]
name = "taimi-screen"
version = "1.1.1"
description = "generate PDF from taimi screenshots"
authors = [{ name = "Yasukazu ", email = "yasukazu@makyno.jp" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "camel-converter>=5.0.0",
    "classopt>=0.2.1",
    "config-argument-parser>=1.5.1",
    "configargparse>=1.7.1",
    "console-menu>=0.8.0",
    "fancy-dataclass>=0.10.1",
    "img2pdf>=0.5.1,<0.6.0",
    "jsonargparse>=4.45.0",
    "logbook>=1.8.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.3",
    "returns>=0.23.0",
    "tomli-w>=1.2.0",
    "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "flask>=3.1.2",
    "loguru>=0.7.3",
    "pick>=2.4.0",
    "pyocr>=0.8.5",
    "pudb>=2025.1.1",
    "python-dotenv[cli]>=1.1.0",
    "ruff>=0.13.2",
    "jupyterlab>=4.4.9",
    "xeus-python>=0.17.6",
    "ipython>=9.6.0",
    "pdf2img>=0.1.2",
    "toml>=0.10.2",
    "duckdb>=1.4.3",
    "peewee>=3.19.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
